# aie-yt-daily-digest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: install_cron.sh  install_launchd.sh
src/digest/: __init__.py  config.py  emailer.py  main.py  render.py  state.py  summarize.py  youtube.py
tests/: test_config.py  test_main.py  test_render.py  test_state.py  test_summarize.py  test_youtube.py
tests/fixtures/: feed.xml
