[project]
name = "aie-yt-daily-digest"
version = "0.1.0"
description = "Daily email digest of new uploads on the AI Engineer YouTube channel"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.6.30",
]

[project.scripts]
aie-digest = "digest.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
